--- a/JavaApplication50/nbproject/private/private.properties
+++ b/JavaApplication50/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jcalendar-1.4.jar=C:\\Users\\Sergio\\Documents\\NetBeansProjects\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\SERGIO\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\Sergio\\AppData\\Roaming\\NetBeans\\17\\build.properties
